--- a/index.html
+++ b/index.html
@@ -6,11 +6,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second Asignment</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+
+    <!-- header section  -->
+
     <header>
-        
+
+
+       <section class="header-container">
+
+        <div class="header-section">
+            <h3 class="header-tittle">G3 Architects</h3>
+
+            <div class="nav-section">
+                <nav>
+                    <ul>
+                        <li>home</li>
+                        <li>About</li>
+                        <li>contac</li>
+                        <li>Login</li>
+                    </ul>
+                </nav>
+            </div>
+
+            <article class="header-article">
+
+                <div class="sub-tittle">
+                    <h2>Brand New 
+                        Group of Architects 
+                        </h2>
+                </div>
+
+                <div class="header-description">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+
+                <div class="btn-primary">
+                    <button class="btn"><a href="">explore me</a></button>
+                </div>
+
+                <div class="header-picture">
+                    <img src="images/banner.png" alt="">
+                </div>
+
+
+            </article>
+
+
+
+
+        </div>
+    </div>
+
+
+
+       </section>
+
+            
 
 
     </header>
