--- a/index.html
+++ b/index.html
@@ -60,12 +60,7 @@
 
         </div>
     </div>
-
-
-
        </section>
-
-            
 
 
     </header>
@@ -73,6 +68,45 @@
 
 
     <main>
+
+        <!-- quick-list-container -->
+
+        <section class="quick-list-section">
+
+            <div class="quick-list-container">
+
+                
+            <div class="quick-photo">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+
+
+            <div class="quick-list-text">
+
+                <h2 class="quick-list-header"> <span style="color: #727272;;">Quick list</span> <span style="color: black;">of Our</span> <span style="color: darkorange;">Features</span> </h2>
+
+                <div class="quick-list-paragraph">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                    <div class="btn-primary">
+
+                        <button class="btn">Explore</button>
+
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
+
+
+            </div>
+        </section>
 
 
 
